Live theme Pull

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9505,8 +9505,8 @@
         "settings": {
           "title": "<strong>Corporate Gifting<\/strong> give the gift of something sweet!",
           "text": "<p>Send cookie dough to your clients, employees, friends & more! We’ll work together to create the perfect gift to show them how much you care. Email <a href=\"mailto:info@cookiedonyc.com\" target=\"_blank\" title=\"mailto:info@cookiedonyc.com\">info@cookiedonyc.com<\/a> with any inquiries, we can’t wait to hear from you!<\/p>",
-          "btn_text": "Download our 2022 Corporate Gifting Catalog",
-          "btn_url": "https:\/\/cdn.shopify.com\/s\/files\/1\/2509\/8354\/files\/2022_corporate_gifting_sheet_cookiedo.pdf?v=1644932005",
+          "btn_text": "Download our 2023 Corporate Gifting Catalog",
+          "btn_url": "https:\/\/cdn.shopify.com\/s\/files\/1\/2509\/8354\/files\/2023_Corporate_Gifting.pdf?v=1677126829",
           "btn_text2": "Download Gifting Address Form",
           "btn_url2": "https:\/\/cdn.shopify.com\/s\/files\/1\/2509\/8354\/files\/Bulk_Address_Form.xlsx?v=1642634763"
         }
